--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,180 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_27220/103336300.py:2: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
-      "  chat = ChatOpenAI(model=\"gpt-4o-mini\")\n",
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_27220/103336300.py:3: LangChainDeprecationWarning: The method `BaseChatModel.predict` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  b = chat.predict(\"How many planets are there?\", max_tokens=150)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'As of now, there are eight recognized planets in our Solar System. They are:\\n\\n1. Mercury\\n2. Venus\\n3. Earth\\n4. Mars\\n5. Jupiter\\n6. Saturn\\n7. Uranus\\n8. Neptune\\n\\nAdditionally, there are classified as dwarf planets, including Pluto, Eris, Haumea, Makemake, and Ceres, among others. In the broader context of the universe, there are likely billions of planets in other star systems, but the exact number is not known.'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "chat = ChatOpenAI(model=\"gpt-4o-mini\")\n",
-    "b = chat.predict(\"How many planets are there?\", max_tokens=150)\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.output_parser import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
     "\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The distance between France and Germany varies depending on the specific locations being compared. However, the approximate driving distance between Paris, France and Berlin, Germany is around 1,050 kilometers (650 miles).'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "model = ChatOpenAI(model_name='gpt-3.5-turbo')\n",
     "\n",
-    "chat = ChatOpenAI(temperature=0.1)\n",
-    "template = PromptTemplate.from_template(\"What is the distance between {country_a} and {country_b}?\")\n",
-    "\n",
-    "prompt = template.format(country_a=\"France\", country_b=\"Germany\")\n",
-    "\n",
-    "\n",
-    "chat.predict(prompt)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Γεια σας! Η απόσταση μεταξύ Γαλλίας και Γερμανίας είναι περίπου 500 χιλιόμετρα. Το όνομά μου είναι Mini. Πώς μπορώ να βοηθήσω;', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 108, 'prompt_tokens': 52, 'total_tokens': 160, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-cfd3d275-bf5d-49be-a63c-8eb4a9eb83e9-0')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "template = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", \"You are a geography expert. And you only reply in {language}.\"),\n",
-    "        (\"ai\", \"Ciao, mi chiamo {name}!\"),\n",
-    "        (\"human\", \"What is the distance between {country_a} and {country_b}. Also, what is your name?\")\n",
-    "    ]\n",
+    "poem_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"You are a poet. Write a poem about the '{language}' programming language.\"\n",
     ")\n",
-    "\n",
-    "prompt = template.format_messages(\n",
-    "    language=\"Greek\",\n",
-    "    name=\"Mini\",\n",
-    "    country_a=\"France\",\n",
-    "    country_b=\"Germany\"\n",
+    "poem_chain = poem_prompt | model | StrOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explanation_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Explain the following {poem}\"\n",
     ")\n",
-    "\n",
-    "chat.predict_messages(prompt)\n"
+    "explanation_chain = explanation_prompt | model | StrOutputParser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hello', 'how', 'are', 'you']"
+       "{'language': 'python',\n",
+       " 'poem': \"In the land of code, where languages reside,\\nThere dwells a serpent, sleek and wise.\\nPython is its name, a language renowned,\\nFor its simplicity and power unbound.\\n\\nWith syntax clean and easy to read,\\nIt slithers through tasks with lightning speed.\\nFrom web development to data science's art,\\nPython weaves its magic in every part.\\n\\nIts libraries vast, its capabilities vast,\\nPython shines bright, unsurpassed.\\nFrom machine learning to automation's hand,\\nPython reigns supreme, a language grand.\\n\\nSo let us embrace this serpent of code,\\nAnd unleash its power in every abode.\\nFor with Python by our side, we can soar,\\nAnd conquer the digital world like never before.\",\n",
+       " 'explanation': 'This poem describes Python, a popular programming language known for its simplicity, readability, and versatility. The poem personifies Python as a sleek and wise serpent that navigates through tasks quickly and efficiently.\\n\\nPython is praised for its clean syntax, making it easy for programmers to write and understand code. It is widely used in various fields such as web development, data science, machine learning, and automation due to its vast libraries and capabilities.\\n\\nThe poem encourages embracing Python as a powerful tool in the digital world, highlighting its potential to help users conquer challenges and excel in their coding endeavors. Ultimately, Python is portrayed as a grand and powerful language that can lead programmers to success in their coding journeys.'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.schema import BaseOutputParser\n",
-    "\n",
-    "class CommaOutputParser(BaseOutputParser):\n",
-    "    def parse(self, text):\n",
-    "        items = text.strip().split(\",\")\n",
-    "        return list(map(str.strip, items))\n",
-    "p = CommaOutputParser()\n",
-    "p.parse(\"Hello,how,are,you\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['mercury', 'venus', 'earth', 'mars', 'jupiter', 'saturn', 'uranus', 'neptune']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "template = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a list generating machine. Everything you are asked will be answered with a comma separated list of max {max_items} in lowercase. Do not reply with anything else.\"),\n",
-    "    (\"human\", \"{question}\")\n",
-    "])\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['persian', 'siamese', 'maine coon', 'ragdoll', 'bengal']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain = template | chat | CommaOutputParser()\n",
-    "\n",
-    "chain.invoke({\n",
-    "    \"max_items\": 5,\n",
-    "    \"question\": \"What are the cats?\"\n",
-    "})\n"
+    "final_chain = (\n",
+    "    RunnablePassthrough.assign(poem=poem_chain)\n",
+    "    | RunnablePassthrough.assign(explanation=explanation_chain)\n",
+    ")\n",
+    "final_chain.invoke({'language': \"python\"})"
    ]
   }
  ],
