--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.output_parser import StrOutputParser\n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
-    "model = ChatOpenAI(model_name='gpt-3.5-turbo')\n",
-    "\n",
-    "poem_prompt = ChatPromptTemplate.from_template(\n",
-    "    \"You are a poet. Write a poem about the '{language}' programming language.\"\n",
-    ")\n",
-    "poem_chain = poem_prompt | model | StrOutputParser()"
+    "chat = ChatOpenAI(\n",
+    "    model_name=\"gpt-3.5-turbo\",\n",
+    "    streaming=True,\n",
+    "    callbacks=[\n",
+    "        StreamingStdOutCallbackHandler(),\n",
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -25,10 +25,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explanation_prompt = ChatPromptTemplate.from_template(\n",
-    "    \"Explain the following {poem}\"\n",
+    "poet_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a world-renowned poet known for your deep understanding of programming languages. Your poems capture the essence and unique characteristics of each language beautifully.\",\n",
+    "        ),\n",
+    "        (\"human\", \"Write a poem about the {language} programming language.\"),\n",
+    "    ]\n",
     ")\n",
-    "explanation_chain = explanation_prompt | model | StrOutputParser()"
+    "\n",
+    "poet_chain = poet_prompt | chat"
    ]
   },
   {
@@ -50,11 +57,28 @@
     }
    ],
    "source": [
-    "final_chain = (\n",
-    "    RunnablePassthrough.assign(poem=poem_chain)\n",
-    "    | RunnablePassthrough.assign(explanation=explanation_chain)\n",
+    "explainer_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are an expert in poetry analysis. Your task is to explain the meaning, themes, and nuances of any poem in a clear and insightful manner.\",\n",
+    "        ),\n",
+    "        (\"human\", \"Explain the following poem:\\n\\n{poem}\"),\n",
+    "    ]\n",
     ")\n",
-    "final_chain.invoke({'language': \"python\"})"
+    "\n",
+    "explainer_chain = explainer_prompt | chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_chain = {\"poem\": poet_chain} | explainer_chain\n",
+    "\n",
+    "final_chain.invoke({\"language\": \"python\"})"
    ]
   }
  ],
