--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,12 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI: \n",
+      "        I know this:\n",
+      "        Capital: Seoul\n",
+      "        Language: Korean\n",
+      "        Food: Kimchi and Bulgogi\n",
+      "        Currency: South Korean Won"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='AI: \\n        I know this:\\n        Capital: Seoul\\n        Language: Korean\\n        Food: Kimchi and Bulgogi\\n        Currency: South Korean Won', additional_kwargs={}, response_metadata={'finish_reason': 'stop'}, id='run-13744819-4331-4de9-99ea-c01f0af58bb1-0')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(\n",
@@ -16,69 +40,58 @@
     "    callbacks=[\n",
     "        StreamingStdOutCallbackHandler(),\n",
     "    ],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poet_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\",\n",
-    "            \"You are a world-renowned poet known for your deep understanding of programming languages. Your poems capture the essence and unique characteristics of each language beautifully.\",\n",
-    "        ),\n",
-    "        (\"human\", \"Write a poem about the {language} programming language.\"),\n",
-    "    ]\n",
     ")\n",
     "\n",
-    "poet_chain = poet_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'language': 'python',\n",
-       " 'poem': \"In the land of code, where languages reside,\\nThere dwells a serpent, sleek and wise.\\nPython is its name, a language renowned,\\nFor its simplicity and power unbound.\\n\\nWith syntax clean and easy to read,\\nIt slithers through tasks with lightning speed.\\nFrom web development to data science's art,\\nPython weaves its magic in every part.\\n\\nIts libraries vast, its capabilities vast,\\nPython shines bright, unsurpassed.\\nFrom machine learning to automation's hand,\\nPython reigns supreme, a language grand.\\n\\nSo let us embrace this serpent of code,\\nAnd unleash its power in every abode.\\nFor with Python by our side, we can soar,\\nAnd conquer the digital world like never before.\",\n",
-       " 'explanation': 'This poem describes Python, a popular programming language known for its simplicity, readability, and versatility. The poem personifies Python as a sleek and wise serpent that navigates through tasks quickly and efficiently.\\n\\nPython is praised for its clean syntax, making it easy for programmers to write and understand code. It is widely used in various fields such as web development, data science, machine learning, and automation due to its vast libraries and capabilities.\\n\\nThe poem encourages embracing Python as a powerful tool in the digital world, highlighting its potential to help users conquer challenges and excel in their coding endeavors. Ultimately, Python is portrayed as a grand and powerful language that can lead programmers to success in their coding journeys.'}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "explainer_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\n",
-    "            \"system\",\n",
-    "            \"You are an expert in poetry analysis. Your task is to explain the meaning, themes, and nuances of any poem in a clear and insightful manner.\",\n",
-    "        ),\n",
-    "        (\"human\", \"Explain the following poem:\\n\\n{poem}\"),\n",
+    "examples = [\n",
+    "    {\n",
+    "        \"question\": \"What do you know about France?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        Here is what I know:\n",
+    "        Capital: Paris\n",
+    "        Language: French\n",
+    "        Food: Wine and Cheese\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What do you know about Italy?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        I know this:\n",
+    "        Capital: Rome\n",
+    "        Language: Italian\n",
+    "        Food: Pizza and Pasta\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What do you know about Greece?\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        I know this:\n",
+    "        Capital: Athens\n",
+    "        Language: Greek\n",
+    "        Food: Souvlaki and Feta Cheese\n",
+    "        Currency: Euro\n",
+    "        \"\"\",\n",
+    "    },\n",
     "    ]\n",
+    "\n",
+    "example_template = \"\"\"\n",
+    "    Human: {question}\n",
+    "    AI: {answer}\n",
+    "\"\"\"\n",
+    "\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\\n\")  \n",
+    "\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "    examples=examples,\n",
+    "    example_prompt=example_prompt,\n",
+    "    suffix=\"Human: What do you know about {country}?\",\n",
+    "    input_variables=[\"country\"],\n",
     ")\n",
-    "\n",
-    "explainer_chain = explainer_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_chain = {\"poem\": poet_chain} | explainer_chain\n",
-    "\n",
-    "final_chain.invoke({\"language\": \"python\"})"
+    "chain = prompt | chat\n",
+    "chain.invoke({\n",
+    "    \"country\": \"Sounth Korea\"\n",
+    "})"
    ]
   }
  ],
