--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,36 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AI: \n",
+      "\n",
       "        I know this:\n",
       "        Capital: Seoul\n",
       "        Language: Korean\n",
-      "        Food: Kimchi and Bulgogi\n",
-      "        Currency: South Korean Won"
+      "        Food: Kimchi and Bibimbap\n",
+      "        Currency: South Korean Won\n",
+      "        "
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='AI: \\n        I know this:\\n        Capital: Seoul\\n        Language: Korean\\n        Food: Kimchi and Bulgogi\\n        Currency: South Korean Won', additional_kwargs={}, response_metadata={'finish_reason': 'stop'}, id='run-13744819-4331-4de9-99ea-c01f0af58bb1-0')"
+       "AIMessage(content='\\n        I know this:\\n        Capital: Seoul\\n        Language: Korean\\n        Food: Kimchi and Bibimbap\\n        Currency: South Korean Won\\n        ', additional_kwargs={}, response_metadata={'finish_reason': 'stop'}, id='run-bff8e2cd-0d31-4723-9f73-a51a05f20c89-0')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate, FewShotChatMessagePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(\n",
@@ -44,7 +45,7 @@
     "\n",
     "examples = [\n",
     "    {\n",
-    "        \"question\": \"What do you know about France?\",\n",
+    "        \"country\": \"France\",\n",
     "        \"answer\": \"\"\"\n",
     "        Here is what I know:\n",
     "        Capital: Paris\n",
@@ -54,7 +55,7 @@
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"question\": \"What do you know about Italy?\",\n",
+    "        \"country\": \"Italy\",\n",
     "        \"answer\": \"\"\"\n",
     "        I know this:\n",
     "        Capital: Rome\n",
@@ -64,7 +65,7 @@
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"question\": \"What do you know about Greece?\",\n",
+    "        \"country\": \"Greece\",\n",
     "        \"answer\": \"\"\"\n",
     "        I know this:\n",
     "        Capital: Athens\n",
@@ -80,15 +81,23 @@
     "    AI: {answer}\n",
     "\"\"\"\n",
     "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\\n\")  \n",
+    "example_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"human\", \"What do you know about {country}?\"),\n",
+    "    (\"ai\", \"{answer}\")\n",
+    "])  \n",
     "\n",
-    "prompt = FewShotPromptTemplate(\n",
+    "example_prompt = FewShotChatMessagePromptTemplate(\n",
     "    examples=examples,\n",
     "    example_prompt=example_prompt,\n",
-    "    suffix=\"Human: What do you know about {country}?\",\n",
-    "    input_variables=[\"country\"],\n",
     ")\n",
-    "chain = prompt | chat\n",
+    "\n",
+    "final_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a geography expert\"),\n",
+    "    example_prompt,\n",
+    "    (\"human\",\"What do you know about {country}?\" )\n",
+    "])\n",
+    "\n",
+    "chain = final_prompt | chat\n",
     "chain.invoke({\n",
     "    \"country\": \"Sounth Korea\"\n",
     "})"
