--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,50 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "        I know this:\n",
-      "        Capital: Seoul\n",
-      "        Language: Korean\n",
-      "        Food: Kimchi and Bibimbap\n",
-      "        Currency: South Korean Won\n",
-      "        "
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AIMessage(content='\\n        I know this:\\n        Capital: Seoul\\n        Language: Korean\\n        Food: Kimchi and Bibimbap\\n        Currency: South Korean Won\\n        ', additional_kwargs={}, response_metadata={'finish_reason': 'stop'}, id='run-bff8e2cd-0d31-4723-9f73-a51a05f20c89-0')"
+       "'Human: What do you know about Greece?\\nAI:\\n        I know this:\\n        Capital: Athens\\n        Language: Greek\\n        Food: Souvlaki and Feta Cheese\\n        Currency: Euro\\n        \\n\\nHuman: What do you know about Brazil?'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate, FewShotChatMessagePromptTemplate\n",
+    "from langchain.prompts import example_selector\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.prompts.prompt import PromptTemplate\n",
+    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
+    "\n",
     "\n",
     "chat = ChatOpenAI(\n",
-    "    model_name=\"gpt-3.5-turbo\",\n",
+    "    temperature=0.1,\n",
     "    streaming=True,\n",
     "    callbacks=[\n",
     "        StreamingStdOutCallbackHandler(),\n",
     "    ],\n",
     ")\n",
     "\n",
+    "\n",
     "examples = [\n",
     "    {\n",
-    "        \"country\": \"France\",\n",
+    "        \"question\": \"What do you know about France?\",\n",
     "        \"answer\": \"\"\"\n",
     "        Here is what I know:\n",
     "        Capital: Paris\n",
@@ -55,7 +46,7 @@
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"country\": \"Italy\",\n",
+    "        \"question\": \"What do you know about Italy?\",\n",
     "        \"answer\": \"\"\"\n",
     "        I know this:\n",
     "        Capital: Rome\n",
@@ -65,7 +56,7 @@
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"country\": \"Greece\",\n",
+    "        \"question\": \"What do you know about Greece?\",\n",
     "        \"answer\": \"\"\"\n",
     "        I know this:\n",
     "        Capital: Athens\n",
@@ -74,33 +65,36 @@
     "        Currency: Euro\n",
     "        \"\"\",\n",
     "    },\n",
-    "    ]\n",
+    "]\n",
     "\n",
-    "example_template = \"\"\"\n",
-    "    Human: {question}\n",
-    "    AI: {answer}\n",
-    "\"\"\"\n",
     "\n",
-    "example_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"human\", \"What do you know about {country}?\"),\n",
-    "    (\"ai\", \"{answer}\")\n",
-    "])  \n",
+    "class RandomExampleSelector(BaseExampleSelector):\n",
+    "    def __init__(self, examples):\n",
+    "        self.examples = examples\n",
     "\n",
-    "example_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    def add_example(self, example):\n",
+    "        self.examples.append(example)\n",
+    "\n",
+    "    def select_examples(self, input_variables):\n",
+    "        from random import choice\n",
+    "\n",
+    "        return [choice(self.examples)]\n",
+    "\n",
+    "\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI:{answer}\")\n",
+    "\n",
+    "example_selector = RandomExampleSelector(\n",
     "    examples=examples,\n",
-    "    example_prompt=example_prompt,\n",
     ")\n",
     "\n",
-    "final_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", \"You are a geography expert\"),\n",
-    "    example_prompt,\n",
-    "    (\"human\",\"What do you know about {country}?\" )\n",
-    "])\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "    example_prompt=example_prompt,\n",
+    "    example_selector=example_selector,\n",
+    "    suffix=\"Human: What do you know about {country}?\",\n",
+    "    input_variables=[\"country\"],\n",
+    ")\n",
     "\n",
-    "chain = final_prompt | chat\n",
-    "chain.invoke({\n",
-    "    \"country\": \"Sounth Korea\"\n",
-    "})"
+    "prompt.format(country=\"Brazil\")"
    ]
   }
  ],
