--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,31 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_57615/3347070685.py:56: LangChainDeprecationWarning: This class is deprecated. Please see the docstring below or at the link for a replacement option: https://python.langchain.com/api_reference/core/prompts/langchain_core.prompts.pipeline.PipelinePromptTemplate.html\n",
-      "  full_prompt = PipelinePromptTemplate(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arrr matey! Me favorite grub be a hearty plate of salted beef and hardtack biscuits! Aye, nothing beats the taste of the sea! Arrr!"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AIMessage(content='Arrr matey! Me favorite grub be a hearty plate of salted beef and hardtack biscuits! Aye, nothing beats the taste of the sea! Arrr!', additional_kwargs={}, response_metadata={'finish_reason': 'stop'}, id='run-86a4cf2c-6b8e-4baa-862b-f1cdd235d393-0')"
+       "AIMessage(content=\"Arrr matey! Me favorite food be a good ol' plate of salted fish and hardtack! Aye, nothing beats the taste of the sea on me tongue! Arrr!\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 41, 'prompt_tokens': 77, 'total_tokens': 118, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-343202d5-0531-4fd0-871f-77920cb6389d-0')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,13 +21,17 @@
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
+    "from langchain.globals import set_llm_cache, set_debug\n",
+    "from langchain.cache import InMemoryCache, SQLiteCache\n",
+    "\n",
+    "set_llm_cache(SQLiteCache(\"cache.db\"))\n",
     "\n",
     "chat = ChatOpenAI(\n",
     "    temperature=0.1,\n",
-    "    streaming=True,\n",
-    "    callbacks=[\n",
-    "        StreamingStdOutCallbackHandler(),\n",
-    "    ],\n",
+    "    # streaming=True,\n",
+    "    # callbacks=[\n",
+    "    #     StreamingStdOutCallbackHandler(),\n",
+    "    # ],\n",
     ")\n",
     "\n",
     "intro = PromptTemplate.from_template(\n",
@@ -75,7 +64,7 @@
     "    {intro}\n",
     "\n",
     "    {example}\n",
-    "    \n",
+    "\n",
     "    {start}\n",
     "\"\"\"\n",
     ")\n",
