--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,18 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Arrr matey! Me favorite food be a good ol' plate of salted fish and hardtack! Aye, nothing beats the taste of the sea on me tongue! Arrr!\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 41, 'prompt_tokens': 77, 'total_tokens': 118, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-343202d5-0531-4fd0-871f-77920cb6389d-0')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_57615/1724076709.py:79: LangChainDeprecationWarning: The method `BaseChatModel.predict` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  a = chat.predict(\"What is the recipe for soju\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingredients:\n",
+      "- 1 cup of rice\n",
+      "- 1 cup of water\n",
+      "- 1 tablespoon of nuruk (fermentation starter)\n",
+      "- 1 tablespoon of sugar\n",
+      "\n",
+      "Instructions:\n",
+      "1. Rinse the rice thoroughly and soak it in water for at least 1 hour.\n",
+      "2. Drain the rice and steam it until it is fully cooked.\n",
+      "3. Let the rice cool down to room temperature.\n",
+      "4. In a large bowl, mix the nuruk and sugar with the cooked rice.\n",
+      "5. Cover the bowl with a clean cloth and let it ferment in a warm place for 3-4 days.\n",
+      "6. After the fermentation process is complete, strain the mixture through a cheesecloth to remove any solids.\n",
+      "7. Transfer the liquid to a clean container and let it sit for another 1-2 days to allow the flavors to develop.\n",
+      "8. Your homemade soju is now ready to be enjoyed! Serve chilled or at room temperature. \n",
+      "\n",
+      "Ingredients:\n",
+      "- 3 1/2 cups all-purpose flour\n",
+      "- 1 packet active dry yeast\n",
+      "- 1 1/2 cups warm water\n",
+      "- 1 tablespoon sugar\n",
+      "- 1 teaspoon salt\n",
+      "- 2 tablespoons olive oil\n",
+      "\n",
+      "Instructions:\n",
+      "1. In a small bowl, combine the warm water, sugar, and yeast. Let it sit for about 5-10 minutes until it becomes frothy.\n",
+      "2. In a large mixing bowl, combine the flour and salt. Make a well in the center and pour in the yeast mixture and olive oil.\n",
+      "3. Mix everything together until a dough forms. Knead the dough on a floured surface for about 5-10 minutes until it becomes smooth and elastic.\n",
+      "4. Place the dough in a greased bowl, cover it with a clean towel, and let it rise in a warm place for about 1-2 hours or until it has doubled in size.\n",
+      "5. Preheat the oven to 375°F (190°C). Punch down the dough and shape it into a loaf. Place it on a baking sheet lined with parchment paper.\n",
+      "6. Cover the loaf with a clean towel and let it rise for another 30 minutes.\n",
+      "7. Bake the bread in the preheated oven for about 30-35 minutes or until it is golden brown and sounds hollow when tapped on the bottom.\n",
+      "8. Let the bread cool before slicing and serving. Enjoy! \n",
+      "\n",
+      "Tokens Used: 514\n",
+      "\tPrompt Tokens: 27\n",
+      "\t\tPrompt Tokens Cached: 0\n",
+      "\tCompletion Tokens: 487\n",
+      "\t\tReasoning Tokens: 0\n",
+      "Successful Requests: 2\n",
+      "Total Cost (USD): $0.0010145\n"
+     ]
     }
    ],
    "source": [
@@ -23,6 +68,7 @@
     "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "from langchain.globals import set_llm_cache, set_debug\n",
     "from langchain.cache import InMemoryCache, SQLiteCache\n",
+    "from langchain.callbacks import get_openai_callback\n",
     "\n",
     "set_llm_cache(SQLiteCache(\"cache.db\"))\n",
     "\n",
@@ -91,7 +137,14 @@
     "        \"example_answer\": \"Arrrrg! That is a secret!! Arg arg!!\",\n",
     "        \"question\": \"What is your fav food?\",\n",
     "    }\n",
-    ")"
+    ")\n",
+    "\n",
+    "with get_openai_callback() as usage:\n",
+    "    a = chat.predict(\"What is the recipe for soju\")\n",
+    "    b = chat.predict(\"What is the recipe for bread\")\n",
+    "    print(a, \"\\n\")\n",
+    "    print(b, \"\\n\")\n",
+    "    print(usage)"
    ]
   }
  ],
