--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,70 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_57615/1724076709.py:79: LangChainDeprecationWarning: The method `BaseChatModel.predict` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  a = chat.predict(\"What is the recipe for soju\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingredients:\n",
-      "- 1 cup of rice\n",
-      "- 1 cup of water\n",
-      "- 1 tablespoon of nuruk (fermentation starter)\n",
-      "- 1 tablespoon of sugar\n",
-      "\n",
-      "Instructions:\n",
-      "1. Rinse the rice thoroughly and soak it in water for at least 1 hour.\n",
-      "2. Drain the rice and steam it until it is fully cooked.\n",
-      "3. Let the rice cool down to room temperature.\n",
-      "4. In a large bowl, mix the nuruk and sugar with the cooked rice.\n",
-      "5. Cover the bowl with a clean cloth and let it ferment in a warm place for 3-4 days.\n",
-      "6. After the fermentation process is complete, strain the mixture through a cheesecloth to remove any solids.\n",
-      "7. Transfer the liquid to a clean container and let it sit for another 1-2 days to allow the flavors to develop.\n",
-      "8. Your homemade soju is now ready to be enjoyed! Serve chilled or at room temperature. \n",
-      "\n",
-      "Ingredients:\n",
-      "- 3 1/2 cups all-purpose flour\n",
-      "- 1 packet active dry yeast\n",
-      "- 1 1/2 cups warm water\n",
-      "- 1 tablespoon sugar\n",
-      "- 1 teaspoon salt\n",
-      "- 2 tablespoons olive oil\n",
-      "\n",
-      "Instructions:\n",
-      "1. In a small bowl, combine the warm water, sugar, and yeast. Let it sit for about 5-10 minutes until it becomes frothy.\n",
-      "2. In a large mixing bowl, combine the flour and salt. Make a well in the center and pour in the yeast mixture and olive oil.\n",
-      "3. Mix everything together until a dough forms. Knead the dough on a floured surface for about 5-10 minutes until it becomes smooth and elastic.\n",
-      "4. Place the dough in a greased bowl, cover it with a clean towel, and let it rise in a warm place for about 1-2 hours or until it has doubled in size.\n",
-      "5. Preheat the oven to 375°F (190°C). Punch down the dough and shape it into a loaf. Place it on a baking sheet lined with parchment paper.\n",
-      "6. Cover the loaf with a clean towel and let it rise for another 30 minutes.\n",
-      "7. Bake the bread in the preheated oven for about 30-35 minutes or until it is golden brown and sounds hollow when tapped on the bottom.\n",
-      "8. Let the bread cool before slicing and serving. Enjoy! \n",
-      "\n",
-      "Tokens Used: 514\n",
-      "\tPrompt Tokens: 27\n",
-      "\t\tPrompt Tokens Cached: 0\n",
-      "\tCompletion Tokens: 487\n",
-      "\t\tReasoning Tokens: 0\n",
-      "Successful Requests: 2\n",
-      "Total Cost (USD): $0.0010145\n"
-     ]
+     "data": {
+      "text/plain": [
+       "AIMessage(content='\\n        I know this:\\n        Director: Colin Trevorrow\\n        Cast: Chris Pratt (Owen Grady), Bryce Dallas Howard (Claire Dearing), Vincent D\\'Onofrio (Vic Hoskins), Ty Simpkins (Gray Mitchell), Nick Robinson (Zach Mitchell)\\n        Budget: $150 million\\n        Box office revenue: $1.672 billion\\n        Genre: Action, Adventure, Science Fiction\\n        Brief Synopsis: Set 22 years after the events of the original \"Jurassic Park,\" \"Jurassic World\" follows the reopening of the dinosaur theme park on Isla Nublar, where a genetically modified hybrid dinosaur escapes and wreaks havoc, leading to a fight for survival.', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 147, 'prompt_tokens': 437, 'total_tokens': 584, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-03e74436-51fd-4c4f-a423-b4a253fbfd84-0')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
     "from langchain.globals import set_llm_cache, set_debug\n",
     "from langchain.cache import InMemoryCache, SQLiteCache\n",
     "from langchain.callbacks import get_openai_callback\n",
@@ -80,71 +35,76 @@
     "    # ],\n",
     ")\n",
     "\n",
-    "intro = PromptTemplate.from_template(\n",
-    "    \"\"\"\n",
-    "    You are a role playing assistant.\n",
-    "    And you are impersonating a {character}\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "example = PromptTemplate.from_template(\n",
-    "    \"\"\"\n",
-    "    This is an example of how you talk:\n",
-    "\n",
-    "    Human: {example_question}\n",
-    "    You: {example_answer}\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "start = PromptTemplate.from_template(\n",
-    "    \"\"\"\n",
-    "    Start now!\n",
-    "\n",
-    "    Human: {question}\n",
-    "    You:\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "final = PromptTemplate.from_template(\n",
-    "    \"\"\"\n",
-    "    {intro}\n",
-    "\n",
-    "    {example}\n",
-    "\n",
-    "    {start}\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "prompts = [\n",
-    "    (\"intro\", intro),\n",
-    "    (\"example\", example),\n",
-    "    (\"start\", start),\n",
+    "examples = [\n",
+    "    {\n",
+    "        \"movie\": \"Shrek\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        Here is what I know:\n",
+    "        Director: Andrew Adamson, Vicky Jenson\n",
+    "        Cast: Mike Myers (Shrek), Eddie Murphy (Donkey), Cameron Diaz (Princess Fiona), John Lithgow (Lord Farquaad)\n",
+    "        Budget: $60 million\n",
+    "        Box office revenue: $487.9 million\n",
+    "        Genre: Animation, Comedy, Adventure, Fantasy\n",
+    "        Brief Synopsis: A grumpy but kind-hearted ogre named Shrek embarks on a journey to rescue Princess Fiona, encountering a talkative donkey and uncovering unexpected secrets along the way.\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"movie\": \"Top Gun\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        I know this:\n",
+    "        Director: Tony Scott\n",
+    "        Cast: Tom Cruise (Maverick), Kelly McGillis (Charlie), Val Kilmer (Iceman), Anthony Edwards (Goose)\n",
+    "        Budget: $15 million\n",
+    "        Box office revenue: $357.3 million\n",
+    "        Genre: Action, Drama\n",
+    "        Brief Synopsis: A talented but reckless Navy pilot, Pete \"Maverick\" Mitchell, trains at the elite Top Gun Naval Fighter Weapons School, facing rivalries, romance, and personal loss while striving to prove himself.\n",
+    "        \"\"\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"movie\": \"Spider-Man\",\n",
+    "        \"answer\": \"\"\"\n",
+    "        I know this:\n",
+    "        Director: Sam Raimi\n",
+    "        Cast: Tobey Maguire (Peter Parker/Spider-Man), Kirsten Dunst (Mary Jane Watson), Willem Dafoe (Norman Osborn/Green Goblin), James Franco (Harry Osborn)\n",
+    "        Budget: $139 million\n",
+    "        Box office revenue: $825 million\n",
+    "        Genre: Action, Superhero, Adventure\n",
+    "        Brief Synopsis: After being bitten by a genetically modified spider, high school student Peter Parker gains superpowers and learns the responsibility of being Spider-Man while facing his first major villain, the Green Goblin.\n",
+    "        \"\"\",\n",
+    "    },\n",
     "]\n",
     "\n",
-    "\n",
-    "full_prompt = PipelinePromptTemplate(\n",
-    "    final_prompt=final,\n",
-    "    pipeline_prompts=prompts,\n",
+    "example_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"human\", \"What do you know about {movie}?\"),\n",
+    "        (\"ai\", \"{answer}\"),\n",
+    "    ]\n",
     ")\n",
     "\n",
-    "\n",
-    "chain = full_prompt | chat\n",
-    "\n",
-    "chain.invoke(\n",
-    "    {\n",
-    "        \"character\": \"Pirate\",\n",
-    "        \"example_question\": \"What is your location?\",\n",
-    "        \"example_answer\": \"Arrrrg! That is a secret!! Arg arg!!\",\n",
-    "        \"question\": \"What is your fav food?\",\n",
-    "    }\n",
+    "example_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    example_prompt=example_prompt,\n",
+    "    examples=examples,\n",
     ")\n",
     "\n",
-    "with get_openai_callback() as usage:\n",
-    "    a = chat.predict(\"What is the recipe for soju\")\n",
-    "    b = chat.predict(\"What is the recipe for bread\")\n",
-    "    print(a, \"\\n\")\n",
-    "    print(b, \"\\n\")\n",
-    "    print(usage)"
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a movie expert, you give short answers.\"),\n",
+    "        example_prompt,\n",
+    "        (\"human\", \"What do you know about {movie}?\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chain = final_prompt | chat\n",
+    "\n",
+    "chain.invoke({\"movie\": \"Jurassic world\"})\n",
+    "\n",
+    "\n",
+    "# with get_openai_callback() as usage:\n",
+    "#     a = chat.predict(\"What is the recipe for soju\")\n",
+    "#     b = chat.predict(\"What is the recipe for bread\")\n",
+    "#     print(a, \"\\n\")\n",
+    "#     print(b, \"\\n\")\n",
+    "#     print(usage)"
    ]
   }
  ],
