--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -106,6 +106,31 @@
     "#     print(b, \"\\n\")\n",
     "#     print(usage)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='Hi', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Hello', additional_kwargs={}, response_metadata={})]}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.memory import ConversationBufferMemory\n",
+    "\n",
+    "memory = ConversationBufferMemory(return_messages=True)\n",
+    "memory.save_context({\"input\": \"Hi\"}, {\"output\": \"Hello\"})\n",
+    "memory.load_memory_variables({})"
+   ]
   }
  ],
  "metadata": {
