--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -109,26 +109,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='Hi', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='Hello', additional_kwargs={}, response_metadata={})]}"
+       "{'history': [HumanMessage(content='1', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='1', additional_kwargs={}, response_metadata={})]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.memory import ConversationBufferMemory, ConversationBufferWindowMemory\n",
     "\n",
-    "memory = ConversationBufferMemory(return_messages=True)\n",
-    "memory.save_context({\"input\": \"Hi\"}, {\"output\": \"Hello\"})\n",
+    "# memory = ConversationBufferMemory(return_messages=True)\n",
+    "# memory.save_context({\"input\": \"Hi\"}, {\"output\": \"Hello\"})\n",
+    "# memory.load_memory_variables({})\n",
+    "\n",
+    "memory = ConversationBufferWindowMemory(\n",
+    "    return_messages=True,\n",
+    "    k=4,\n",
+    ")\n",
+    "\n",
+    "def add_message(input, output):\n",
+    "    memory.save_context({\"input\": input}, {\"output\": output})\n",
+    "\n",
+    "add_message(\"1\", \"1\")\n",
+    "add_message(\"2\", \"2\")\n",
+    "add_message(\"3\", \"3\")\n",
+    "add_message(\"4\", \"4\")\n",
+    "add_message(\"5\", \"5\")\n",
     "memory.load_memory_variables({})"
    ]
   }
