--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -109,42 +109,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_87695/670782761.py:4: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(temperature=0.1)\n",
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_87695/670782761.py:6: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory = ConversationSummaryMemory(llm=llm)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content='1', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='1', additional_kwargs={}, response_metadata={})]}"
+       "{'history': 'Nicolas introduces himself as living in South Korea, and the AI expresses admiration for that fact, wishing it could visit the country.'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.memory import ConversationBufferMemory, ConversationBufferWindowMemory\n",
+    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "# memory = ConversationBufferMemory(return_messages=True)\n",
-    "# memory.save_context({\"input\": \"Hi\"}, {\"output\": \"Hello\"})\n",
-    "# memory.load_memory_variables({})\n",
+    "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationBufferWindowMemory(\n",
-    "    return_messages=True,\n",
-    "    k=4,\n",
-    ")\n",
+    "memory = ConversationSummaryMemory(llm=llm)\n",
+    "\n",
     "\n",
     "def add_message(input, output):\n",
     "    memory.save_context({\"input\": input}, {\"output\": output})\n",
     "\n",
-    "add_message(\"1\", \"1\")\n",
-    "add_message(\"2\", \"2\")\n",
-    "add_message(\"3\", \"3\")\n",
-    "add_message(\"4\", \"4\")\n",
-    "add_message(\"5\", \"5\")\n",
-    "memory.load_memory_variables({})"
+    "\n",
+    "def get_history():\n",
+    "    return memory.load_memory_variables({})\n",
+    "\n",
+    "\n",
+    "add_message(\"Hi I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")\n",
+    "add_message(\"South Korea is so pretty\", \"I wish I could go!!!\")\n",
+    "get_history()"
    ]
   }
  ],
