--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -109,37 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_87695/670782761.py:4: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
-      "  llm = ChatOpenAI(temperature=0.1)\n",
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_87695/670782761.py:6: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
-      "  memory = ConversationSummaryMemory(llm=llm)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'history': 'Nicolas introduces himself as living in South Korea, and the AI expresses admiration for that fact, wishing it could visit the country.'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain.memory import ConversationSummaryMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationSummaryMemory(llm=llm)\n",
+    "memory = ConversationSummaryBufferMemory(\n",
+    "    llm=llm,\n",
+    "    max_token_limit=150,\n",
+    "    return_messages=True,\n",
+    ")\n",
     "\n",
     "\n",
     "def add_message(input, output):\n",
@@ -150,8 +133,129 @@
     "    return memory.load_memory_variables({})\n",
     "\n",
     "\n",
-    "add_message(\"Hi I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")\n",
-    "add_message(\"South Korea is so pretty\", \"I wish I could go!!!\")\n",
+    "add_message(\"Hi I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={})]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\"South Korea is so pretty\", \"I wish I could go!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='South Korea is so pretty', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='I wish I could go!!!', additional_kwargs={}, response_metadata={})]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\"How far is Korea from Argentina?\", \"I don't know! Super far!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='South Korea is so pretty', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='I wish I could go!!!', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='How far is Korea from Argentina?', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content=\"I don't know! Super far!\", additional_kwargs={}, response_metadata={})]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_message(\"How far is Brazil from Argentina?\", \"I don't know! Super far!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='South Korea is so pretty', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content='I wish I could go!!!', additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='How far is Korea from Argentina?', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content=\"I don't know! Super far!\", additional_kwargs={}, response_metadata={}),\n",
+       "  HumanMessage(content='How far is Brazil from Argentina?', additional_kwargs={}, response_metadata={}),\n",
+       "  AIMessage(content=\"I don't know! Super far!\", additional_kwargs={}, response_metadata={})]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "get_history()"
    ]
   }
