--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -109,18 +109,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/487666667.py:4: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(temperature=0.1)\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "from langchain.memory import ConversationKGMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationSummaryBufferMemory(\n",
+    "memory = ConversationKGMemory(\n",
     "    llm=llm,\n",
-    "    max_token_limit=150,\n",
     "    return_messages=True,\n",
     ")\n",
     "\n",
@@ -129,134 +137,56 @@
     "    memory.save_context({\"input\": input}, {\"output\": output})\n",
     "\n",
     "\n",
-    "def get_history():\n",
-    "    return memory.load_memory_variables({})\n",
-    "\n",
-    "\n",
     "add_message(\"Hi I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={})]}"
+       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea.', additional_kwargs={}, response_metadata={})]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_history()"
+    "memory.load_memory_variables({\"input\": \"who is Nicolas\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_message(\"South Korea is so pretty\", \"I wish I could go!!!\")"
+    "add_message(\"Nicolas likes kimchi\", \"Wow that is so cool!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={}),\n",
-       "  HumanMessage(content='South Korea is so pretty', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='I wish I could go!!!', additional_kwargs={}, response_metadata={})]}"
+       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea. Nicolas likes kimchi.', additional_kwargs={}, response_metadata={})]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_history()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"How far is Korea from Argentina?\", \"I don't know! Super far!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={}),\n",
-       "  HumanMessage(content='South Korea is so pretty', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='I wish I could go!!!', additional_kwargs={}, response_metadata={}),\n",
-       "  HumanMessage(content='How far is Korea from Argentina?', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content=\"I don't know! Super far!\", additional_kwargs={}, response_metadata={})]}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_history()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"How far is Brazil from Argentina?\", \"I don't know! Super far!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'history': [HumanMessage(content=\"Hi I'm Nicolas, I live in South Korea\", additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='Wow that is so cool!', additional_kwargs={}, response_metadata={}),\n",
-       "  HumanMessage(content='South Korea is so pretty', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content='I wish I could go!!!', additional_kwargs={}, response_metadata={}),\n",
-       "  HumanMessage(content='How far is Korea from Argentina?', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content=\"I don't know! Super far!\", additional_kwargs={}, response_metadata={}),\n",
-       "  HumanMessage(content='How far is Brazil from Argentina?', additional_kwargs={}, response_metadata={}),\n",
-       "  AIMessage(content=\"I don't know! Super far!\", additional_kwargs={}, response_metadata={})]}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_history()"
+    "memory.load_memory_variables({\"inputs\": \"what does nicolas like\"})"
    ]
   }
  ],
