--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -109,84 +109,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/487666667.py:4: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
-      "  llm = ChatOpenAI(temperature=0.1)\n"
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/1596113238.py:8: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory = ConversationSummaryBufferMemory(\n",
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/1596113238.py:22: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  chain = LLMChain(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    \n",
+      "    Human:My name is Nico\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Nice to meet you, Nico! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.memory import ConversationKGMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.prompts import PromptTemplate\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationKGMemory(\n",
+    "memory = ConversationSummaryBufferMemory(\n",
     "    llm=llm,\n",
-    "    return_messages=True,\n",
+    "    max_token_limit=120,\n",
+    "    memory_key=\"chat_history\",\n",
     ")\n",
     "\n",
+    "template = \"\"\"\n",
+    "    You are a helpful AI talking to a human.\n",
     "\n",
-    "def add_message(input, output):\n",
-    "    memory.save_context({\"input\": input}, {\"output\": output})\n",
+    "    {chat_history}\n",
+    "    Human:{question}\n",
+    "    You:\n",
+    "\"\"\"\n",
     "\n",
+    "chain = LLMChain(\n",
+    "    llm=llm,\n",
+    "    memory=memory,\n",
+    "    prompt=PromptTemplate.from_template(template),\n",
+    "    verbose=True,\n",
+    ")\n",
     "\n",
-    "add_message(\"Hi I'm Nicolas, I live in South Korea\", \"Wow that is so cool!\")\n"
+    "chain.predict(question=\"My name is Nico\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    Human: My name is Nico\n",
+      "AI: Nice to meet you, Nico! How can I assist you today?\n",
+      "    Human:I live in Seoul\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea.', additional_kwargs={}, response_metadata={})]}"
+       "\"That's great to know! How can I assist you with information or anything related to Seoul?\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({\"input\": \"who is Nicolas\"})"
+    "chain.predict(question=\"I live in Seoul\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_message(\"Nicolas likes kimchi\", \"Wow that is so cool!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "    You are a helpful AI talking to a human.\n",
+      "\n",
+      "    Human: My name is Nico\n",
+      "AI: Nice to meet you, Nico! How can I assist you today?\n",
+      "Human: I live in Seoul\n",
+      "AI: That's great to know! How can I assist you with information or anything related to Seoul?\n",
+      "    Human:What is my name?\n",
+      "    You:\n",
+      "\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'history': [SystemMessage(content='On Nicolas: Nicolas lives in South Korea. Nicolas likes kimchi.', additional_kwargs={}, response_metadata={})]}"
+       "'Your name is Nico.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "memory.load_memory_variables({\"inputs\": \"what does nicolas like\"})"
+    "chain.predict(question=\"What is my name?\")"
    ]
   }
  ],
