feat: Memory challenge : movie emojis

--- a/llm_study_1.ipynb
+++ b/llm_study_1.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='\\n        I know this:\\n        Director: Colin Trevorrow\\n        Cast: Chris Pratt (Owen Grady), Bryce Dallas Howard (Claire Dearing), Vincent D\\'Onofrio (Vic Hoskins), Ty Simpkins (Gray Mitchell), Nick Robinson (Zach Mitchell)\\n        Budget: $150 million\\n        Box office revenue: $1.672 billion\\n        Genre: Action, Adventure, Science Fiction\\n        Brief Synopsis: Set 22 years after the events of the original \"Jurassic Park,\" \"Jurassic World\" follows the reopening of the dinosaur theme park on Isla Nublar, where a genetically modified hybrid dinosaur escapes and wreaks havoc, leading to a fight for survival.', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 147, 'prompt_tokens': 437, 'total_tokens': 584, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-03e74436-51fd-4c4f-a423-b4a253fbfd84-0')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
@@ -109,80 +98,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q5/m8wmkz_d1c11pbrck3p2lm_m0000gn/T/ipykernel_94214/95251428.py:11: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory = ConversationBufferMemory(\n"
+     ]
+    }
+   ],
    "source": [
-    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
     "from langchain.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
     "\n",
+    "# LLM 초기화\n",
     "llm = ChatOpenAI(temperature=0.1)\n",
     "\n",
-    "memory = ConversationSummaryBufferMemory(\n",
-    "    llm=llm,\n",
-    "    max_token_limit=120,\n",
-    "    return_messages=True,\n",
+    "# ✅ 메모리 클래스 변경: 대화를 유지하는 ConversationBufferMemory 사용\n",
+    "memory = ConversationBufferMemory(\n",
+    "    return_messages=True\n",
     ")\n",
     "\n",
+    "# ✅ Few-Shot 예제 추가 (세 개의 이모티콘으로 답하도록)\n",
+    "examples = [\n",
+    "    {\"movie\": \"Top Gun\", \"answer\": \"🛩️👨‍✈️🔥\"},\n",
+    "    {\"movie\": \"The Godfather\", \"answer\": \"👨‍👨‍👦🔫🍝\"},\n",
+    "    {\"movie\": \"Titanic\", \"answer\": \"🚢💔🎶\"},\n",
+    "    {\"movie\": \"Jurassic Park\", \"answer\": \"🦖🏃🌿\"},\n",
+    "]\n",
+    "\n",
+    "example_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [(\"human\", \"What do you know about {movie}?\"), (\"ai\", \"{answer}\")]\n",
+    ")\n",
+    "\n",
+    "few_shot_prompt = FewShotChatMessagePromptTemplate(\n",
+    "    example_prompt=example_prompt,\n",
+    "    examples=examples,\n",
+    ")\n",
+    "\n",
+    "# ✅ 시스템 프롬프트 및 메모리 적용\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
-    "        (\"system\", \"You are a helpful AI talking to a human\"),\n",
-    "        MessagesPlaceholder(variable_name=\"history\"),\n",
-    "        (\"human\", \"{question}\"),\n",
+    "        (\"system\", \"You are a movie expert. You always reply with exactly three emojis.\"),\n",
+    "        few_shot_prompt,  # 예제 추가\n",
+    "        MessagesPlaceholder(variable_name=\"history\"),  # 메모리 활용\n",
+    "        (\"human\", \"{movie}\"),\n",
     "    ]\n",
     ")\n",
     "\n",
-    "\n",
+    "# ✅ LCEL 체인 구현: 메모리 활용하도록 설정\n",
     "def load_memory(_):\n",
     "    return memory.load_memory_variables({})[\"history\"]\n",
     "\n",
-    "\n",
     "chain = RunnablePassthrough.assign(history=load_memory) | prompt | llm\n",
     "\n",
-    "\n",
-    "def invoke_chain(question):\n",
-    "    result = chain.invoke({\"question\": question})\n",
+    "# ✅ 체인 실행 함수\n",
+    "def invoke_chain(movie):\n",
+    "    result = chain.invoke({\"movie\": movie})\n",
     "    memory.save_context(\n",
-    "        {\"input\": question},\n",
+    "        {\"input\": movie},\n",
     "        {\"output\": result.content},\n",
     "    )\n",
-    "    print(result)"
+    "    print(result.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Nice to meet you, Nico! How can I assist you today?' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 25, 'total_tokens': 40, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None} id='run-1e7b510f-a815-4815-ae3d-7555d049352e-0'\n"
+      "🛩️👨‍✈️🔥\n"
      ]
     }
    ],
    "source": [
-    "invoke_chain(\"My name is nico\")"
+    "invoke_chain(\"Top Gun\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Your name is Nico.' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 6, 'prompt_tokens': 52, 'total_tokens': 58, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None} id='run-2a8f367a-90e8-4cb9-af53-1fd5868e3975-0'\n"
+      "👨‍👨‍👦🔫🍝\n"
      ]
     }
    ],
    "source": [
-    "invoke_chain(\"What is my name?\")"
+    "invoke_chain(\"The Godfather\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛩️👨‍✈️🔥\n"
+     ]
+    }
+   ],
+   "source": [
+    "invoke_chain(\"What was the first movie I asked about?\")"
    ]
   }
  ],
